--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,9 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
+* {
+  box-sizing: border-box;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -18,12 +21,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #202124;
 }
 
 @layer utilities {
