--- a/src/app/tab-form/styles.css
+++ b/src/app/tab-form/styles.css
@@ -12,20 +12,24 @@
   height: 100vh;
 }
 
+.tab-list-main {
+  position: relative;
+  margin-bottom: 20px;
+}
+
 .tab-list {
   display: flex;
   align-items: center;
   list-style: none;
   padding: 0;
-  margin: 0 0 20px 0;
-  border-bottom: 1px solid #ccc;
+  margin: 0 0 0;
   gap: 4px;
   overflow-x: scroll;
 }
 
 .tab {
-  padding: 10px 20px;
-  cursor: pointer;
+  padding: 10px 8px;
+  cursor: default;
   background-color: rgb(245, 245, 245);
   border-top: 1px solid rgb(204, 204, 204);
   border-right: 1px solid rgb(204, 204, 204);
@@ -36,18 +40,32 @@
   min-width: fit-content;
 }
 
+.tab > div {
+  display: flex;
+  align-items: center;
+}
+
 .active-tab {
   background-color: #fff;
   border-bottom: 1px solid #fff;
-  margin-bottom: -1px;
+  z-index: 10;
+}
+
+.under-line {
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  background: #ccc;
+  z-index: 5;
+  margin-top: -1px;
 }
 
 .add-tab {
   border: 1px solid #ccc;
   border-radius: 50%;
   position: relative;
-  width: 30px;
-  height: 30px;
+  width: 24px;
+  height: 24px;
 }
 
 .add-tab::before,
@@ -73,12 +91,6 @@
   height: 80%;
 }
 
-.tab-nativation-footer {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-}
-
 .profile-main,
 .interest-main,
 .settings-main {
@@ -102,6 +114,29 @@
   font-size: small;
 }
 
-.navigate-button {
-  padding: 4px;
+.close-icon {
+  background-color: transparent;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  position: relative;
+  margin-left: 8px;
+}
+
+.close-icon::before,
+.close-icon::after {
+  content: '';
+  width: 75%;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: black;
+}
+
+.close-icon::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.close-icon::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
