--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,8 @@
 }
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,21 +21,19 @@
   }
 }
 
-/* Set a default root font size */
 html {
-  font-size: 16px; /* 1rem = 16px */
+  font-size: 16px;
 }
 
-/* Responsive Scaling */
 @media (max-width: 768px) {
   html {
-    font-size: 14px; /* Smaller font for mobile */
+    font-size: 14px;
   }
 }
 
 @media (max-width: 480px) {
   html {
-    font-size: 12px; /* Even smaller font for very small screens */
+    font-size: 12px;
   }
 }
 
@@ -46,4 +46,151 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.main {
+  padding: 8px;
+  background-color: white;
+  color: black;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.tab-list-main {
+  position: relative;
+  height: 40px;
+}
+
+.tab-list {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0 0 0;
+  gap: 4px;
+  overflow-x: scroll;
+}
+
+.tab {
+  padding: 10px 8px;
+  cursor: default;
+  background-color: rgb(245, 245, 245);
+  border-top: 1px solid rgb(204, 204, 204);
+  border-right: 1px solid rgb(204, 204, 204);
+  border-left: 1px solid rgb(204, 204, 204);
+  border-image: initial;
+  border-bottom: none;
+  border-radius: 4px 4px 0px 0px;
+  min-width: fit-content;
+}
+
+.tab > div {
+  display: flex;
+  align-items: center;
+}
+
+.active-tab {
+  background-color: #fff;
+  border-bottom: 1px solid #fff;
+  z-index: 10;
+}
+
+.under-line {
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  background: #ccc;
+  z-index: 5;
+  margin-top: -1px;
+}
+
+.add-tab {
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  position: relative;
+  width: 24px;
+  height: 24px;
+}
+
+.add-tab::before,
+.add-tab::after {
+  content: '';
+  position: absolute;
+  width: 75%;
+  height: 2px;
+  background: rgb(204, 204, 204);
+  top: 50%;
+  left: 50%;
+}
+
+.add-tab::before {
+  transform: translate(-50%, -50%);
+}
+.add-tab::after {
+  transform: translate(-50%, -50%) rotate(90deg);
+}
+
+.tab-nativation-body {
+  position: relative;
+  border: 2px solid #ccc;
+  overflow: auto;
+  flex: auto;
+  border-top: none;
+}
+
+.profile-main,
+.interest-main,
+.settings-main {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.interests-list,
+.settings-list {
+  display: flex;
+  gap: 4px;
+  align-items: center;
+}
+
+.error {
+  color: red;
+  display: block;
+  font-size: small;
+}
+
+.close-icon {
+  background-color: transparent;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  position: relative;
+  margin-left: 8px;
+}
+
+.close-icon::before,
+.close-icon::after {
+  content: '';
+  width: 75%;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: black;
+}
+
+.close-icon::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.close-icon::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
